applications/base/vanitydomain/vanitydomain.yaml
apiVersion: v1
kind: Service
metadata:
  name: vanitydomain
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: vanitydomain
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vanitydomain
spec:
  selector:
    matchLabels:
      app: vanitydomain
  replicas: 1
  template:
    metadata:
      labels:
        app: vanitydomain
    spec:
      containers:
        - name: vanitydomain
          ports:
            - containerPort: 80
          resources:
            limits:
              cpu: "50m"
              memory: "16Mi"
            requests:
              cpu: "25m"
              memory: "8Mi"
