applications/base/vanitydomain/vanitydomain-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-to-https-redirect
  namespace: ${release_env}-vanitydomain
spec:
  hostnames:
    - "${base_uri}"
    - "www.${base_uri}"
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: traefik-gateway
    namespace: traefik
    sectionName: web
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /.well-known/acme-challenge/
    backendRefs: [] 
  
  - matches:
    - path:
        type: PathPrefix
        value: /
    filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: https
        statusCode: 301
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: bare-to-www-redirect
  namespace: ${release_env}-vanitydomain
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
      sectionName: websecure-vanity
  hostnames:
    - "${base_uri}" 
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            hostname: "www.${base_uri}"
            statusCode: 301
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: www-to-backend
  namespace: ${release_env}-vanitydomain
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
      sectionName: websecure-vanity
  hostnames:
    - "www.${base_uri}"
  rules:
    - backendRefs:
        - name: vanitydomain
          port: 80
